--- a/MovieRating/Components/AddMovie.razor
+++ b/MovieRating/Components/AddMovie.razor
@@ -2,7 +2,7 @@
 @using MovieRating.Services
 @using SharedLibrary
 @inject IMovieService MovieService
-@inject NavigationManager NavManager;
+@inject NavigationManager NavManager
 
 <PageTitle>Add Movie</PageTitle>
 <h3>Add a Movie</h3>
