--- a/MovieRating/Components/WriteAReview.razor
+++ b/MovieRating/Components/WriteAReview.razor
@@ -2,6 +2,7 @@
 @inject IMovieService MovieService
 @inject IReviewService ReviewService
 @inject NavigationManager NavManager;
+@attribute [Authorize]
 
 @if (movie == null)
 {
