--- a/MovieRating/Components/ReviewList.razor
+++ b/MovieRating/Components/ReviewList.razor
@@ -6,9 +6,9 @@
     <h3>Average rating: @averageRating</h3>
     @if (authenticationState.User.Identity.IsAuthenticated)
     {
-        <h3>Your rating: @authenticationState.User.Identity.Name</h3>
+        <h3>Your rating: @usersRating</h3>
     }
-    
+
 </div>
 <h2>All Reviews</h2>
 
@@ -20,7 +20,7 @@ else
 {
     @foreach (var review in reviews)
     {
-        <div style="margin:10px; padding:20px; border-style: solid; " >
+        <div style="margin:10px; padding:20px; border-style: solid; ">
             <div>
                 <h5>@review.ReviewText</h5>
             </div>
@@ -41,20 +41,26 @@ else
     public Task<AuthenticationState> AuthenticationState { get; set; }
     AuthenticationState authenticationState;
 
-    int averageRating;
+    double averageRating;
+    double usersRating;
 
     protected override async Task OnInitializedAsync()
     {
         authenticationState = await AuthenticationState;
         reviews = await ReviewService.GetReviewByMovieId(id);
         averageRating = await ReviewService.GetAverageReviewByMovieId(id);
+
+        if (authenticationState.User.Identity.IsAuthenticated)
+        {
+            usersRating = await ReviewService.GetUsersScoreByUserEmailAndMovieId(id, authenticationState.User.Identity.Name);
+        }
     }
 
 
 
-    
 
 
 
-    
+
+
 }
